--- a/register.html
+++ b/register.html
@@ -306,7 +306,7 @@
             if (result.isConfirmed) {
                 currentAdminId = null;
                 // Redirect ke data.html agar bisa login kembali sebagai super admin jika perlu
-                window.location.href = 'data.html';
+                window.location.href = 'register.html';
             }
         });
     }
