--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <header class="main-header">
         <div class="header-container" data-aos="fade-down">
             <a href="#" class="logo">
-                <img src="logoku.PNG" alt="Logo xlordcode"> <span>xlordcode</span>
+                <img src="logoku.PNG" alt="Logo xlordcode"> <span>XlordVerse</span>
             </a>
             <nav class="main-nav">
                 <a href="#templates">Template</a>
@@ -328,7 +328,7 @@
         <section class="faq" id="faq">
             <h2 class="section-title" data-aos="fade-up">Tanya Jawab Umum</h2>
             <div class="faq-container" data-aos="fade-up" data-aos-delay="100">
-                <details class="faq-item"><summary class="faq-question">Apa sebenarnya xlordcode itu?<i class="fas fa-chevron-down faq-arrow"></i></summary><p class="faq-answer">xlordcode adalah platform yang memungkinkan Anda membuat website ucapan selamat ulang tahun digital dengan animasi dan desain personal secara mudah dan cepat, tanpa perlu keahlian coding.</p></details>
+                <details class="faq-item"><summary class="faq-question">Apa sebenarnya XlordVerse itu?<i class="fas fa-chevron-down faq-arrow"></i></summary><p class="faq-answer">XlordVerse adalah platform yang memungkinkan Anda membuat website ucapan selamat ulang tahun digital dengan animasi dan desain personal secara mudah dan cepat, tanpa perlu keahlian coding.</p></details>
                 <details class="faq-item"><summary class="faq-question">Apakah layanan ini gratis?<i class="fas fa-chevron-down faq-arrow"></i></summary><p class="faq-answer">Saat ini, kami menyediakan berbagai template dan fitur dasar yang dapat Anda gunakan secara gratis. Untuk fitur-fitur premium di masa depan, mungkin akan ada biaya tambahan, tapi akan selalu ada versi gratisnya!</p></details>
                 <details class="faq-item"><summary class="faq-question">Apakah saya perlu keahlian teknis?<i class="fas fa-chevron-down faq-arrow"></i></summary><p class="faq-answer">Sama sekali tidak! Platform kami dirancang dengan antarmuka yang intuitif. Anda hanya perlu memilih template, mengisi data seperti nama dan ucapan, lalu website Anda langsung siap dibagikan.</p></details>
                 <details class="faq-item"><summary class="faq-question">Bagaimana cara membagikan website ucapan saya?<i class="fas fa-chevron-down faq-arrow"></i></summary><p class="faq-answer">Setelah selesai membuat, Anda akan mendapatkan sebuah link unik. Cukup salin (copy) link tersebut dan tempel (paste) untuk dibagikan ke teman atau keluarga Anda melalui media sosial, aplikasi chat, atau email.</p></details>
@@ -354,7 +354,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            &copy; 2025 xlordcode. All Rights Reserved.
+            &copy; 2025 XlordVerse. All Rights Reserved.
         </div>
     </footer>
 
