--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
     <header class="main-header">
         <div class="header-container" data-aos="fade-down">
             <a href="#" class="logo">
-                <img src="logoku.PNG" alt="Logo xlordcode"> <span>XlordVerse</span>
+                <img src="IMG_1551.png" alt="Logo xlordcode"> <span>XlordVerse</span>
             </a>
             <nav class="main-nav">
                 <a href="#templates">Template</a>
