--- a/register.html
+++ b/register.html
@@ -113,7 +113,7 @@
     <div id="auth-container">
         <div class="box" id="auth-box">
             <div class="brand-header">
-                <img src="/logoku.PNG" alt="XlordCode Logo">
+                <img src="/IMG_1551.png" alt="XlordCode Logo">
                 <h1>Hi, There! Welcome to panel</h1>
                 <p id="auth-subtitle">Sign in to your account to continue</p>
             </div>
