--- a/register.html
+++ b/register.html
@@ -208,7 +208,7 @@
     <div id="auth-container">
         <div class="box" id="auth-box">
             <div class="brand-header">
-                <img src="/logoku.PNG" alt="Logo">
+                <img src="/IMG_1551.png" alt="Logo">
                 <h1>Selamat Datang</h1>
                 <p id="auth-subtitle">Masuk untuk melanjutkan ke panel Anda</p>
             </div>
