--- a/login.html
+++ b/login.html
@@ -190,7 +190,7 @@
         <p id="errorMessage">Pastikan link yang Anda masukkan sudah benar dan lengkap.</p>
     </div>
     <div class="gift-modal" id="giftModal">
-        <div class="gift-box" onclick="openCard()"><img src="IMG_1316.png" alt="Gift Box" style="width: 100%; height: 100%; object-fit: contain;"></div>
+        <div class="gift-box" onclick="openCard()"><img src="nir.gif" alt="Gift Box" style="width: 100%; height: 100%; object-fit: contain;"></div>
         <div class="gift-card" id="giftCard">
             <h2 style="font-weight: 600;">Hai, <span id="giftCardName"></span>!</h2>
             <p>Scan QR ini untuk klaim hadiahmu!</p>
