--- a/demo.html
+++ b/demo.html
@@ -116,7 +116,7 @@
     </div>
 
     <div class="gift-modal" id="giftModal">
-        <div class="gift-box"><img src="IMG_1316.png" alt="Gift Box" style="width: 100%; height: 100%; object-fit: contain;"></div>
+        <div class="gift-box"><img src="nir.gif" alt="Gift Box" style="width: 100%; height: 100%; object-fit: contain;"></div>
         <div class="gift-card" id="giftCard">
             <h2 style="font-weight: 600;">Hai, <span id="giftCardName"></span>!</h2>
             <p>Scan QR ini untuk klaim hadiahmu!</p>
