--- a/register.html
+++ b/register.html
@@ -468,7 +468,7 @@
             document.getElementById('guestUserInput').value = data.guestUser || '';
             document.getElementById('guestPassInput').value = data.guestPass || '';
             document.getElementById('targetWhatsappNumber').value = data.targetWhatsappNumber || '';
-            document.getElementById('shareableLink').value = `${window.location.origin}/index.html?id=${currentAdminId}`;
+            document.getElementById('shareableLink').value = `${window.location.origin}/login.html?id=${currentAdminId}`;
             document.getElementById('puzzleWord1').value = data.puzzleWord1 || '';
             document.getElementById('puzzleWord2').value = data.puzzleWord2 || '';
             document.getElementById('puzzleWord3').value = data.puzzleWord3 || '';
