--- a/index.html
+++ b/index.html
@@ -263,7 +263,26 @@
 
         /* --- Hero Section --- */
         .hero-section .welcome-panel { background: var(--bg-color); border-radius: var(--border-radius-main); padding: 40px 45px; box-shadow: 15px 15px 30px var(--shadow-dark), -15px -15px 30px var(--shadow-light); max-width: 650px; margin: 0 auto; }
-        .panel-icon { width: 100px; height: 100px; background: var(--bg-color); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 25px; font-size: 3.5rem; color: var(--primary); box-shadow: inset 8px 8px 16px var(--shadow-dark), inset -8px -8px 16px var(--shadow-light); }
+        .panel-icon { 
+            width: 100px; 
+            height: 100px; 
+            background: var(--bg-color); 
+            border-radius: 50%; 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            margin: 0 auto 25px; 
+            font-size: 3.5rem; 
+            color: var(--primary); 
+            box-shadow: inset 8px 8px 16px var(--shadow-dark), inset -8px -8px 16px var(--shadow-light); 
+        }
+        /* Style tambahan untuk gambar di dalam .panel-icon */
+        .panel-icon img {
+            width: 250%;
+            height: 250%;
+            object-fit: contain; /* Memastikan gambar pas di dalam lingkaran */
+            border-radius: 50%; /* Jika gambar tidak bulat, ini akan membuatnya bulat */
+        }
         .panel-icon i { background: var(--gradient-primary); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent; }
         h1 { font-size: 2.8rem; font-weight: 800; margin-bottom: 20px; line-height: 1.3; background: var(--gradient-primary); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent; }
         p { color: var(--text-light); font-size: 1.1rem; line-height: 1.7; margin-bottom: 40px; max-width: 500px; margin-left: auto; margin-right: auto; }
@@ -451,7 +470,9 @@
     <main class="landing-page">
         <section class="hero-section" id="hero">
             <div class="welcome-panel" data-aos="fade-up">
-                <div class="panel-icon"><i class="fa-solid fa-wand-magic-sparkles"></i></div>
+                <div class="panel-icon">
+                    <img src="dor.gif" alt="Ikon Selamat Datang" style="width: 100%; height: 100%; object-fit: contain;">
+                </div>
                 <h1>Desain Ucapan Ultah, Cuma Modal Klik?</h1>
                 <p>Animasi keren + desain elegan. Gak perlu ngoding, ciptakan website ucapan selamat ulang tahun yang personal dan berkesan dalam hitungan menit.</p>
                 <div class="button-group">
