--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         <section class="hero-section" id="hero">
             <div class="welcome-panel" data-aos="fade-up">
                 <div class="panel-icon">
-                    <img src="dor.gif" alt="Ikon Selamat Datang" style="width: 100%; height: 100%; object-fit: contain;">
+                    <img src="/img/dor.gif" alt="Ikon Selamat Datang" style="width: 100%; height: 100%; object-fit: contain;">
                 </div>
                 <h1>Desain Ucapan Ultah, Cuma Modal Klik?</h1>
                 <p>Animasi keren + desain elegan. Gak perlu ngoding, ciptakan website ucapan selamat ulang tahun yang personal dan berkesan dalam hitungan menit.</p>
