--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Hi, Welcome</title>
     
-    <link rel="shortcut icon" type="image/png" href="favicon.PNG" />
+    <link rel="shortcut icon" type="image/png" href="/IMG_1551.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
