--- a/index.html
+++ b/index.html
@@ -519,12 +519,12 @@
         </section>
         
         <section class="templates" id="templates">
-            <h2 class="section-title" data-aos="fade-up">Carefully crafted templates for every occasion</h2>
+            <h2 class="section-title" data-aos="fade-up">Template yang dirancang dengan cermat untuk setiap kesempatan</h2>
             <div class="templates-container">
                 <div class="template-card confetti-birthday" data-aos="fade-right" data-aos-delay="100">
                     <canvas class="confetti-canvas"></canvas>
                     <div class="template-header"><div class="template-icon"><i class="fas fa-birthday-cake"></i></div><h3>Birthday Template</h3></div>
-                    <p>Create a delightful animated birthday wish with personalized messages, beautiful transitions, and charming animations. Perfect for making someone's special day even more memorable.</p>
+                    <p>Buat ucapan ulang tahun yang menyenangkan dengan pesan pribadi, transisi yang indah, dan animasi yang memikat. Sempurna untuk membuat hari istimewa seseorang menjadi lebih berkesan.</p>
                     <div class="card-button-group"><a href="register.html" class="btn primary">Mulai buat ucapan!<i class="fa-solid fa-arrow-right-to-bracket" style="color: #ffffff;"></i></a><a href="demo.html" class="btn secondary"><i class="fas fa-eye"></i> Preview demo template</a></div>
                 </div>
 
@@ -536,8 +536,8 @@
                         <div class="bubble"></div>
                     </div>
                     <div class="template-header"><div class="template-icon"><i class="fas fa-wand-sparkles"></i></div><h3>More Templates Coming Soon</h3></div>
-                    <p>We're working on more beautiful templates for different occasions. Stay tuned for anniversary wishes, congratulations cards, and many more exciting additions to our collection.</p>
-                    <p>Have a specific occasion or template idea in mind? I'd love to hear about it!</p>
+                    <p>Kami sedang mengembangkan lebih banyak template indah untuk berbagai momen spesial. Nantikan ucapan ulang tahun pernikahan, kartu ucapan selamat, dan masih banyak lagi tambahan menarik dalam koleksi kami.</p>
+                    <p>Punya ide untuk acara tertentu atau template yang ingin dibuat? Kami ingin sekali mendengarnya!</p>
                     <div class="card-button-group"><a class="btn disabled"><i class="fas fa-gift"></i> Coming Soon</a><a href="#" class="btn secondary"><i class="fas fa-lightbulb"></i> Suggest Template</a></div>
                 </div>
             </div>
@@ -549,7 +549,7 @@
                 <div class="feature-card" data-aos="fade-up" data-aos-delay="100"><div class="feature-icon"><i class="fas fa-palette"></i></div><h4>Template Premium</h4><p>Desain neumorphic yang sedang tren. Buat kesan pertama yang tak terlupakan.</p></div>
                 <div class="feature-card" data-aos="fade-up" data-aos-delay="200"><div class="feature-icon"><i class="fas fa-film"></i></div><h4>Animasi Halus</h4><p>Setiap elemen muncul dengan animasi yang membuat website lebih hidup dan dinamis.</p></div>
                 <div class="feature-card" data-aos="fade-up" data-aos-delay="300"><div class="feature-icon"><i class="fas fa-mobile-alt"></i></div><h4>Super Responsif</h4><p>Tampilan sempurna di semua perangkat, baik desktop, tablet, maupun mobile.</p></div>
-                <div class="feature-card" data-aos="fade-up" data-aos-delay="400"><div class="feature-icon"><i class="fas fa-music"></i></div><h4>Musik Latar Kustom</h4><p>Tambahkan lagu favorit untuk membuat suasana menjadi lebih spesial dan personal.</p></div>
+                <div class="feature-card" data-aos="fade-up" data-aos-delay="400"><div class="feature-icon"><i class="fas fa-music"></i></div><h4>Pilihan latar musik</h4><p>Pilihan musik, sesuaikan dengan moodmu </p></div>
             </div>
         </section>
         
