--- a/tes.html
+++ b/tes.html
@@ -27,14 +27,12 @@
     <script>
         // --- PASTE KONFIGURASI FIREBASE ANDA DI SINI ---
         const firebaseConfig = {
-    apiKey: "AIzaSyCCaLXoaHFOuXRnHAvQzg9R0c1tfsTsTBU",
-    authDomain: "proyek-xlord.firebaseapp.com",
-    URL basis data: "https://project-xlord-default-rtdb.asia-southeast1.firebasedatabase.app",
-    projectId: "proyek-xlord",
-    penyimpananBucket: "project-xlord.firebasestorage.app",
-    messageSenderId: "847461816867",
-    appId: "1:847461816867:web:17071ba14ffe6a6099ef96",
-    ID pengukuran: "G-344KX3B197"
+apiKey: "AIzaSyCCaLXoaHFOuXRnHAvQzg9R0c1tfsTsTBU",
+authDomain: "proyek-xlord.firebaseapp.com",
+projectId: "proyek-xlord",
+storageBucket: "project-xlord.firebasestorage.app",
+messagingSenderId: "847461816867",
+appId: "1:847461816867:web:17071ba14ffe6a6099ef96"
 };
         // ----------------------------------------------------
 
