--- a/tes.html
+++ b/tes.html
@@ -32,7 +32,7 @@ authDomain: "proyek-xlord.firebaseapp.com",
 projectId: "proyek-xlord",
 storageBucket: "project-xlord.firebasestorage.app",
 messagingSenderId: "847461816867",
-appId: "1:847461816867:web:17071ba14ffe6a6099ef96"
+appId: "1:847461816867:web:17071ba14ffe6a6099ef96",
 };
         // ----------------------------------------------------
 
