--- a/register.html
+++ b/register.html
@@ -259,7 +259,7 @@
             <div id="auth-box">
                 <div class="brand-header">
                     <img src="/IMG_1551.png" alt="Logo">
-                    <h1 id="form-title">Welcome to XlordVerse</h1>
+                    <h1 id="form-title">Selamat datang!</h1>
                     <p id="auth-subtitle">Masuk untuk melanjutkan</p>
                 </div>
                 
