--- a/register.html
+++ b/register.html
@@ -504,7 +504,7 @@
         authFlipper.classList.remove('is-flipped');
         mainActionBtn.innerHTML = '<i class="fas fa-sign-in-alt"></i> Masuk';
         document.getElementById('auth-subtitle').textContent = 'Masuk untuk melanjutkan';
-        document.getElementById('form-title').textContent = 'Welcome to XlordVerse';
+        document.getElementById('form-title').textContent = 'Selamat datang!';
         
         setTimeout(() => { 
             const loginForm = document.getElementById('login-form-content');
